Fix modal on mobiles

--- a/css/gifts.css
+++ b/css/gifts.css
@@ -133,6 +133,8 @@ dialog::backdrop {
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(5px);
   z-index: 1001;
+  position: fixed;
+  
 }
 
 .modal-close {
